[package]
name = "libraw-sys"
version = "0.2.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings to libraw"
homepage = "https://github.com/dcuddeback/libraw-sys"
repository = "https://github.com/dcuddeback/libraw-sys"
license = "MIT"
readme = "README.md"
keywords = ["libraw", "raw", "camera"]
edition = "2021"


[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.2"
gcc = "0.3.19"
